--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,27 +2,48 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
 
 nav {
     background-color: cornflowerblue;
-    padding: 10px;
+    padding: 1rem;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #fff;
 }
 
 h1 {
     color: cornflowerblue;
     margin-top: 1rem;
     margin-left: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid cornflowerblue;
+    display: flex;
+    justify-content: center;
 }
 
 main {
+    grid-column: 2/3;
     max-width: 840px;
 }
 
@@ -34,7 +55,7 @@ main img {
     box-shadow: 0 0 30px gray;
     float: right;
     margin: 0 0 1rem 1rem;
-    margin-top: 22px;
+    margin-top: 1rem;
 }
 
 p {
@@ -42,15 +63,22 @@ p {
 }
 
 aside {
-    width: 20em;
+    width: 20rem;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
     width: 200px;
     height: auto;
     margin-top: 1rem;
+}
+
+aside p {
+    text-align: left;
+    font-weight: 350;
 }
 
 footer {
@@ -63,8 +91,12 @@ footer {
 
 .box {
     margin: 1rem;
-    border: 1px solid rgb(0, 0, 0 / 10%);
+    border: 1px solid rgb(0, 0, 0, .1);
     padding: 1rem;
     background-color: #ddd;
     color: #000;
+}
+
+.temples {
+    margin-left: 1rem;
 }
